tests/positive/literals_typical.em
int main() {
bool b = true;
float f = 3.14;
return 0;
}