tests/negative/literals_typical.em
int main() {
    float f = 3.14.15;
    return 0;
}